# WAC

./: .gitignore  CMakeLists.txt  set-WAC-GSI  set-WAC-HOME
Base/: AnalysisConfiguration.cpp  AnalysisConfiguration.hpp  BaseLinkDef.h  CMakeLists.txt  Event.cpp  Event.hpp  EventFilter.cpp  EventLoop.cpp  EventPool.hpp  GeneralizedGaussianProfile.cpp  HistogramCollection.cpp  HistogramCollection.hpp  Histograms.cpp  Histograms.hpp  Particle.cpp  Particle.hpp  ParticleAnalyzer.cpp  ParticleAnalyzer.hpp  ParticleFilter.cpp  ParticleFilter.hpp  ParticleHistos.cpp  ParticleHistos.hpp  ParticlePairBalanceFunctionDiffHistos.cpp  ParticlePairBalanceFunctionDiffHistos.hpp  ParticlePairCombinedDiffHistos.cpp  ParticlePairCombinedHistos.cpp  ParticlePairDerivedDiffHistos.cpp  ParticlePairDerivedDiffHistos.hpp  ParticlePairDerivedHistos.cpp  ParticlePairDiffHistos.cpp  ParticlePairDiffHistos.hpp  ParticlePairHistos.cpp  ParticlePairHistos.hpp  Task.cpp  Task.hpp  TaskConfiguration.cpp  TaskConfiguration.hpp  TwoPartCorrelationAnalyzer.cpp  TwoPartCorrelationAnalyzer.hpp  TwoPartDiffCorrelationAnalyzer.cpp  (+3 more)
Clusters/GSI/: batchRunPythiaCorrelations.sh  batchRunStatsUncertain.sh  entergenwac.sh  runMergePythiaResults.sh  runMergePythiaSubsamples.sh  runPythiaCorrelations.sh  runScriptInSingularity.sh  runStatsUncertain.sh
GSI/: CMakeLists.txt  README.md  TPythia8.cxx
Pythia/: CMakeLists.txt  PythiaAnalysisConfiguration.cpp  PythiaAnalysisConfiguration.hpp  PythiaEventGenerator.cpp  PythiaEventGenerator.hpp  PythiaLinkDef.h  RunPythiaSimulationSingleParticles.cpp  RunPythiaSimulationTwoParticles.cpp  RunPythiaSimulationTwoParticlesDiff.cpp  RunPythiaSimulationTwoParticlesDiffME.cpp  TestPythiaAnalysisConfiguration.cpp  statUncertainPythia.cpp
TOOLS/: recursiveResultFilesMerge.C
Utils/: statUncertain.cpp
